Changed the signature of .exercise function

--- a/examples/ShellsortProficiency.html
+++ b/examples/ShellsortProficiency.html
@@ -325,13 +325,11 @@ a.jsavsettings {
   // Initialize the exercise
   // Defines the function to call on reset (initialize()), and the
   //  function to call to generate the model answer (shellsort())
-  var exer = av.exercise({reset: initialize,
-                          model: shellsort,
-                          compare: [{css: "background-color"}, {}],
-                          controls: $('.jsavexercisecontrols'),
+  var exer = av.exercise(shellsort, initialize, [{css: "background-color"}, {}],
+                          { controls: $('.jsavexercisecontrols'),
                           fix: fixState,
-			  feedback: "continuous",
-			  fixmode: "undo"});
+			                    feedback: "continuous",
+			                    fixmode: "undo"});
   exer.reset();
   
   var swapIndex;
