--- a/examples/ShellsortAlt.html
+++ b/examples/ShellsortAlt.html
@@ -9,12 +9,6 @@
 
 <body>
 <style>
-  #container {
-    width: 800px;
-    height: 400px;
-    background-color: #efe;
-  }
-
   #container .jsavarray {
      left: -10px;
   }
@@ -111,7 +105,6 @@ The second is in positions 1 and 9, and so on.
 <style>
   #container1 {
     width: 760px;
-    height: 135px;
     background-color: #efe;
   }
 </style>
@@ -124,6 +117,9 @@ The second is in positions 1 and 9, and so on.
       <td width=650px>
     	<div class="jsavcontrols"></div>
       </td>
+      <td>
+        <a class="jsavsettings" href="#">Settings</a>
+      </td>
     </tr>
   </table>
 </div>
@@ -131,27 +127,25 @@ The second is in positions 1 and 9, and so on.
 
 <script>
 (function($) {
-  var av1 = new JSAV("container1"); //containing HTML element with id container
-  av1.SPEED = 150; // Set the animation speed base
-
+  var av = new JSAV("container1");
+  av.SPEED = 150; // Set the animation speed base
   // Create an array object under control of JSAV library
-  var arr1 = av1.ds.array([20, 30, 12, 54, 55, 11, 78, 14, 13, 79, 44,
+  var arr = av.ds.array([20, 30, 12, 54, 55, 11, 78, 14, 13, 79, 44,
       98, 76, 45, 32, 11], {indexed: true});
 
   // set color to LIGHT for the whole array, then highlight indices 0 and 8
-  arr1.css(function(index)
+  arr.css(function(index)
     { return index%8 != 0;}, {"color": LIGHT}).highlight([0, 8]);
   // another way to specify a message for a step
-  av1.step();
-  arr1.unhighlight([0, 8]).css([0, 8], {"color": LIGHT}).highlight([1, 9]);
+  av.step();
+  arr.unhighlight([0, 8]).css([0, 8], {"color": LIGHT}).highlight([1, 9]);
   
-  av1.step();
+  av.step();
   for (var i=2; i<8; i++) { // loop through the rest of the array sublists
-    av1.step();
-    arr1.unhighlight([i-1, i+7]).css([i-1, i+7], {"color": LIGHT}).highlight([i, i+8]);
+    av.step();
+    arr.unhighlight([i-1, i+7]).css([i-1, i+7], {"color": LIGHT}).highlight([i, i+8]);
   }
-
-  av1.recorded();
+  av.recorded();
 })(jQuery);
 </script>
 
@@ -160,24 +154,12 @@ Each of these sublists of length two is sorted using Insertion Sort.
 (The blue elements are being compared. The are swapped if appropriate.)
 </p>
 
-<div id="container">
-  <table id=tableT style="margin-top:-15px; margin-bottom:-15px">
-    <tr>
-      <td width=100><span class="jsavcounter"></span></td>
-      <td width=650px>
-    	<div class="jsavcontrols"></div>
-      </td>
-      <td>
-        <a class="jsavsettings" href="#">Settings</a>
-      </td>
-    </tr>
-  </table>
-  <p class="jsavoutput jsavline"></p>
-</div>
-
 <script>
   // Various functions that will be used by all of the following
   // sections of the tutorial.
+
+  var LIGHT = "rgb(215, 215, 215)";  // For "greying out" array elements
+  var DARK = "black";                // Make array elements dark again
 
   // Convenience function for setting another type of highlight
   // (will be used for showing which elements will be compared during sort)
@@ -221,112 +203,315 @@ Each of these sublists of length two is sorted using Insertion Sort.
   }
 </script>
 
+<style>
+  #container2 {
+    width: 760px;
+    background-color: #efe;
+  }
+</style>
+
+<center>
+<div id="container2">
+  <table id=tableT style="margin-top:-15px; margin-bottom:-15px">
+    <tr>
+      <td width=100><span class="jsavcounter"></span></td>
+      <td width=650px>
+    	<div class="jsavcontrols"></div>
+      </td>
+      <td>
+        <a class="jsavsettings" href="#">Settings</a>
+      </td>
+    </tr>
+  </table>
+</div>
+</center>
+
 <script>
 (function($) {
-  var LIGHT = "rgb(215, 215, 215)";  // For "greying out" array elements
-  var DARK = "black";                // Make array elements dark again
-
-  var av = new JSAV("container");
-  av.SPEED = 200; // Set the animation speed base
+  var av = new JSAV("container2");
+  av.SPEED = 150; // Set the animation speed base
 
   // Create an array object under control of JSAV library
   var arr = av.ds.array([20, 30, 12, 54, 55, 11, 78, 14, 13, 79, 44,
       98, 76, 45, 32, 11], {indexed: true});
-
-  // Make a label before the array, and give it an empty string to
-  // take up the appropriate space since we don't want to see the
-  // label initially.
-  var arrlabel = av.label("&nbsp;", {before: arr});
-
-  // Cloned copy of array for holding the original value positions.
-  // Will be shown later to compare against progress made by the algorithm
-  origarr = arr.clone();
-
+  av.step();
   arr.unhighlight(); // unhighlight seems to have the side effect of
                      // making the cell dark.
-
   sweep(av, arr, 8); // first sweep with increment 8
+  av.recorded();
+})(jQuery);
+</script>
 
-  av.step().umsg('At the end of the first pass, the resulting array is "a little better sorted".');
 
-  arr.unhighlight();
+<p>
+At the end of the first pass, the resulting array is "a little better
+sorted".
+</p>
+
+<style>
+  #container3 {
+    width: 760px;
+    background-color: #efe;
+  }
+</style>
+
+<center>
+<div id="container3">
+</div>
+</center>
+
+<script>
+(function($) {
+  var av = new JSAV("container3", {"animationMode": "none"});
+
+  var origarr = av.ds.array([20, 30, 12, 54, 55, 11, 78, 14, 13, 79, 44,
+      98, 76, 45, 32, 11], {indexed: true});
+  var origlabel = av.label("Original Array:", {before: origarr});
+
+  var arr = av.ds.array([13, 30, 12, 54, 55, 11, 32, 11, 20, 79, 44,
+      98, 76, 45, 78, 14], {indexed: true});
+  var arrlabel = av.label("Values in <b style='color:#0f0;'>green</b> were swapped during this pass", {before: arr});
 
   arr.css(function(index)
     { return arr.value(index) !== origarr.value(index); }, {"color": "#0f0"});
+})(jQuery);
+</script>
 
-  arrlabel.text("Values in <b style='color:#0f0;'>green</b> were swapped during this pass");
-  origarr.show();
-  var origlabel = av.label("Original Array:", {before: origarr});
 
-  av.step().umsg("The second pass of Shellsort looks at fewer, bigger lists. For our example the second pass would have n/4 lists of size 4, with the increment being n/4 = 4. Thus, the second pass would have as its first sublist the 4 elements in positions 0, 4, 8, and 12...");
+<p>
+The second pass of Shellsort looks at fewer, bigger lists.
+For our example the second pass would have <i>n</i>/4 lists of size 4,
+with the increment being <i>n</i>/4 = 4.
+Thus, the second pass would have as its first
+sublist the 4 elements in positions 0, 4, 8, and 12.
+The second sublist would have elements in positions 1, 5, 9, and 13,
+and so on.
+</p>
 
-  arrlabel.text("&nbsp;");
-  origarr.hide();
-  origlabel.hide();
+<style>
+  #container4 {
+    width: 760px;
+    background-color: #efe;
+  }
+</style>
+
+<center>
+<div id="container4">
+  <table id=tableT1 style="margin-top:-15px; margin-bottom:-15px">
+    <tr>
+      <td width=100><span class="jsavcounter"></span></td>
+      <td width=650px>
+    	<div class="jsavcontrols"></div>
+      </td>
+      <td>
+        <a class="jsavsettings" href="#">Settings</a>
+      </td>
+    </tr>
+  </table>
+</div>
+</center>
+
+<script>
+(function($) {
+  var av = new JSAV("container4"); //containing HTML element with id container
+  av.SPEED = 150; // Set the animation speed base
+
+  var arr = av.ds.array([13, 30, 12, 54, 55, 11, 32, 11, 20, 79, 44,
+      98, 76, 45, 78, 14], {indexed: true});
 
   arr.css(function(index)
     { return index%4 != 0;}, {"color": LIGHT}).highlight([0, 4, 8, 12]);
 
-  av.step().umsg("... the second sublist would have elements in positions 1, 5, 9, and 13 ...");
+  av.step();
   arr.unhighlight([0, 4, 8, 12]).css([0, 4, 8, 12], {"color": LIGHT}).highlight([1, 5, 9, 13]);
 
-  av.step().umsg("and so on.");
+  av.step();
   arr.unhighlight([1, 5, 9, 13]).css([1, 5, 9, 13], {"color": LIGHT}).highlight([2, 6, 10, 14]);
 
   av.step();
   arr.unhighlight([2, 6, 10, 14]).css([2, 6, 10, 14], {"color": LIGHT}).highlight([3, 7, 11, 15]);
 
-  av.step().umsg("Each sublist of four elements would also be sorted using an Insertion Sort.");
+  av.step();
+  av.recorded();
+})(jQuery);
+</script>
 
-  arr.unhighlight();
+<p>
+Each sublist of four elements would also be sorted using an Insertion
+Sort.
+</p>
 
-  sweep(av, arr, 4); // second sweep with increment 4
+<style>
+  #container5 {
+    width: 760px;
+    background-color: #efe;
+  }
+</style>
 
-  av.step().umsg("At the end of processing sublists with increment 4, the array is \"even more sorted\".");
+<center>
+<div id="container5">
+  <table id=tableT style="margin-top:-15px; margin-bottom:-15px">
+    <tr>
+      <td width=100><span class="jsavcounter"></span></td>
+      <td width=650px>
+    	<div class="jsavcontrols"></div>
+      </td>
+      <td>
+        <a class="jsavsettings" href="#">Settings</a>
+      </td>
+    </tr>
+  </table>
+</div>
+</center>
+
+<script>
+(function($) {
+  var av = new JSAV("container5");
+  av.SPEED = 150; // Set the animation speed base
+
+  // Create an array object under control of JSAV library
+  var arr = av.ds.array([13, 30, 12, 54, 55, 11, 32, 11, 20, 79, 44,
+      98, 76, 45, 78, 14], {indexed: true});
+  av.step();
+  arr.unhighlight(); // unhighlight seems to have the side effect of
+                     // making the cell dark.
+  sweep(av, arr, 4); // Next sweep with increment4
+  av.recorded();
+})(jQuery);
+</script>
+
+<p>
+At the end of processing sublists with increment 4, the array is
+"even more sorted".
+</p>
+
+<style>
+  #container6 {
+    width: 760px;
+    background-color: #efe;
+  }
+</style>
+
+<center>
+<div id="container6">
+</div>
+</center>
+
+<script>
+(function($) {
+  var av = new JSAV("container6", {"animationMode": "none"});
+
+  var origarr = av.ds.array([20, 30, 12, 54, 55, 11, 78, 14, 13, 79, 44,
+      98, 76, 45, 32, 11], {indexed: true});
+  var origlabel = av.label("Original Array:", {before: origarr});
+
+  var arr = av.ds.array([13, 11, 12, 11, 20, 30, 32, 14, 55, 45, 44,
+      54, 76, 79, 78, 98], {indexed: true});
+  var arrlabel = av.label("Values in <b style='color:#0f0;'>green</b> were swapped during this pass", {before: arr});
 
   arr.css(function(index)
     { return arr.value(index) !== origarr.value(index); }, {"color": "#0f0"});
+})(jQuery);
+</script>
 
-  arrlabel.text("Values in <b style='color:#0f0;'>green</b> have been swapped from their original positions.");
-  origarr.show();
-  origlabel.show();
 
-  av.step().umsg("The third pass would be made on sublists with increment 2. This means we process two lists, one consisting of the odd positions and the other consisting of the even positions.");
+<p>
+The third pass would be made on sublists with increment 2.
+This means we process two lists, one consisting of the odd positions
+and the other consisting of the even positions.
+As usual, we sort the sublists using Insertion Sort.
+</p>
 
-  arr.css(function(index) {return index}, {"color": DARK});
+<style>
+  #container7 {
+    width: 760px;
+    background-color: #efe;
+  }
+</style>
 
-  arrlabel.text("&nbsp;");
-  origarr.hide();
-  origlabel.hide();
+<center>
+<div id="container7">
+  <table id=tableT style="margin-top:-15px; margin-bottom:-15px">
+    <tr>
+      <td width=100><span class="jsavcounter"></span></td>
+      <td width=650px>
+    	<div class="jsavcontrols"></div>
+      </td>
+      <td>
+        <a class="jsavsettings" href="#">Settings</a>
+      </td>
+    </tr>
+  </table>
+</div>
+</center>
 
-  arr.highlight([0, 2, 4, 6, 8, 10, 12, 14]);
+<script>
+(function($) {
+  var av = new JSAV("container7");
+  av.SPEED = 150; // Set the animation speed base
+
+  // Create an array object under control of JSAV library
+  var arr = av.ds.array([13, 30, 12, 54, 55, 11, 32, 11, 20, 79, 44,
+      98, 76, 45, 78, 14], {indexed: true});
   av.step();
-  arr.unhighlight([0, 2, 4, 6, 8, 10, 12, 14]).highlight([1, 3, 5, 7, 9, 11, 13, 15]);
+  arr.unhighlight(); // unhighlight seems to have the side effect of
+                     // making the cell dark.
+  sweep(av, arr, 2); // Next sweep with increment4
+  av.recorded();
+})(jQuery);
+</script>
 
-  av.step().umsg("As usual, we sort the sublists using Insertion Sort.");
-  arr.unhighlight();
+<p>
+The culminating pass in this example would be a "normal" Insertion
+Sort of all elements.
+</p>
 
-  av.step();
-  arr.unhighlight();
+<style>
+  #container8 {
+    width: 760px;
+    background-color: #efe;
+  }
+</style>
 
-  sweep(av, arr, 2);
+<center>
+<div id="container8">
+  <table id=tableT style="margin-top:-15px; margin-bottom:-15px">
+    <tr>
+      <td width=100><span class="jsavcounter"></span></td>
+      <td width=650px>
+    	<div class="jsavcontrols"></div>
+      </td>
+      <td>
+        <a class="jsavsettings" href="#">Settings</a>
+      </td>
+    </tr>
+  </table>
+</div>
+</center>
 
-  av.step().umsg("And here is the result of the third pass. The list is getting even more sorted!");
-  arr.unhighlight();
+<script>
+(function($) {
+  var av = new JSAV("container8");
+  av.SPEED = 150; // Set the animation speed base
 
-  av.step().umsg("The culminating pass in this example would be a \"normal\" Insertion Sort of all elements.");
+  // Create an array object under control of JSAV library
+  var arr = av.ds.array([13, 11, 12, 11, 20, 30, 32, 14, 55, 45, 44,
+      54, 76, 79, 78, 98], {indexed: true});
 
   arr.highlight();
   av.step();
 
   inssort(av, arr, 0, 1);
 
-  av.step().umsg("Finally, the array is sorted.");
   arr.unhighlight();
   av.recorded();
-
 })(jQuery);
 </script>
+
+<p>
+Finally, the array is sorted.
+</p>
+
 
 <p>
 Next, you can try running Shellsort on an array of your chosen size,
