ShellsortAlt: Make the borders/background less oppressive.

--- a/examples/ShellsortAlt.html
+++ b/examples/ShellsortAlt.html
@@ -19,8 +19,9 @@
   }
   .jsavcontainer {
     width: 760px;
-    background-color: #efe;
+    background-color: #eed;
     margin: 0 auto;
+    border: 0px
   }
   .jsavcounter {
     float: left;
@@ -214,7 +215,7 @@ Each of these sublists of length two is sorted using Insertion Sort.
 <div id="container2">
   <span class="jsavcounter"></span>
   <a class="jsavsettings" href="#">Settings</a>
-	<div class="jsavcontrols"></div>
+  <div class="jsavcontrols"></div>
 </div>
 
 <script>
@@ -439,7 +440,6 @@ Sort of all elements.
 Finally, the array is sorted.
 </p>
 
-
 <p>
 Next, you can try running Shellsort on an array of your chosen size,
 with either random data or data that you select.
@@ -448,7 +448,7 @@ You can also set the increment series.
 
 <center>
  <iframe src="shellsort-av.html"
-	 type="text/javascript" width="800" height="490"
+	 type="text/javascript" width="820" height="520"
 	 frameborder="0" marginwidth="0" marginheight="0"
 	 scrolling="no">
 </iframe>
